--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		<p>Test</p>
 		<button data-imusic-play="A">Loop A</button>
 		<button data-imusic-play="B">Loop B</button>
+		<button data-imusic-play="C">Loop C</button>
+		<button data-imusic-play="D">Loop D</button>
 		<button data-imusic="stop">STOP</button>
 		<script src="imusic_091.js" data-music-structure="imusic.xml"></script>
 	</body>
