--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 	</head>
 	<body>
 		<p>Test</p>
-		<button data-imusic-play="A">Loop A</button>
-		<button data-imusic-play="B">Loop B</button>
-		<button data-imusic-play="C">Loop C</button>
-		<button data-imusic-play="D">Loop D</button>
-		<button data-imusic="stop">STOP</button>
+		<div>
+			<button data-imusic-play="A">Loop A</button>
+			<button data-imusic-play="B">Loop B</button>
+			<button data-imusic-play="C">Loop C</button>
+			<button data-imusic-play="D">Loop D</button>
+			<button data-imusic="stop">STOP</button>
+		</div>
 		<script src="imusic_091.js" data-music-structure="imusic.xml"></script>
 	</body>
 </html>
