--- a/index.html
+++ b/index.html
@@ -8,18 +8,8 @@
 
 
 	<body>
-		<h1>iMusic - Getting Started</h1>
-		<p>This demo show-cases how to implement two audio loops into an
-			HTML-project using iMusic. There is a guide with all the required steps
-			at <a href="https://github.com/hanslindetorp/imusic/wiki/Getting-Started">
-				https://github.com/hanslindetorp/imusic/wiki/Getting-Started</a>
-			about. You will learn how to prepare your audio files, implement iMusic, configure
-			your music in XML and how to trigger them using the built-in timing
-			features without a single line of javascript. Finally you learn how to make custom
-			javascript calls and where you can find more information.</p>
-
-			<p>This DEMO is available from <a href="https://hanslindetorp.github.io/imusic/demos/getting-started">
-				https://hanslindetorp.github.io/imusic/demos/getting-started</a></p>
+		<h1>Test - iMusic</h1>
+		<p> try the 2 loops </p>
 			<div>
 				<button data-imusic-play="A">Loop A</button>
 				<button data-imusic-play="B">Loop B</button>
