First version of the experiment

--- a/shooter_game/index.html
+++ b/shooter_game/index.html
@@ -10,11 +10,26 @@
 
 
 	<body>
-        <canvas id="collisionCanvas"></canvas>
-        <canvas id="canvas1"></canvas>
-
-
-        <script src="game.js"></script>
+		<div id="home">
+			<center>
+				<img src="kth-logo.png" width = "510" height = "261">
+			</center>
+			<div id="infos">
+				<p>
+					Welcome to our experimental site. During this experiment you will play a shooting game. The rules are simple, you must click on the moving targets to eliminate them. 
+				</p>
+				<p>
+					Please note, there are a few things you need to consider before you start: 
+				</p>
+				<ul>
+					<li>Don't look for performance in the game, just try to do the tasks in a natural way, there is no score and you can't lose. Just have fun.</li>
+					<li>You can turn on the sound if you want, the game will be more immersive.</li>
+				</ul>
+			</div>
+			<div id="container" onclick="location.href='game.html'">
+				<button>Start the experiment</button>
+			</div>
+		</div>
 	</body>
 
 </html>
