Balloons version: After Kjetil Meeting

--- a/shooter_game/game.html
+++ b/shooter_game/game.html
@@ -9,7 +9,7 @@
 	</head>
 
 
-	<body>
+	<body class="game">
         <canvas id="collisionCanvas"></canvas>
         <canvas id="canvas1"></canvas>
 
