--- a/shooter_game/index.html
+++ b/shooter_game/index.html
@@ -16,18 +16,34 @@
 			</center>
 			<div id="infos">
 				<p>
-					Welcome to our experimental site. During this experiment you will play a shooting game. The rules are simple, you must click on the moving targets to eliminate them. 
+					Welcome to our experimental site. During this experiment you will play a shooting game. The rules are simple, you must click on the moving balloons to eliminate them. 
 				</p>
-				<p>
 					Please note, there are a few things you need to consider before you start: 
 				</p>
 				<ul>
-					<li>Don't look for performance in the game, just try to do the tasks in a natural way, there is no score and you can't lose. Just have fun.</li>
-					<li>You can turn on the sound if you want, the game will be more immersive.</li>
+					<li>This game work only on computer, you can't play on smartphone.</li>
+					<li>It is recommanded to use a mouse</li>
 				</ul>
+				<div class="wrapper">
+					<div class="one">If you ear music, click on this type of baloon :</div>
+					<div class="two">If you ear nothing, click on this type of baloon :</div>
+					<div class="three"><img src="free-colorful-balloons/2.png" width = "150" height = "205"></div>
+					<div class="four"><img src="free-colorful-balloons/3.png" width = "150" height = "205"></div>
+				</div>
+				<div class="margin1"></div>
+				<div class="wrapper1">
+					<div class="one1">Test and adjust the music sound before start de experiment : </div>
+					<div class="two1">
+						<div id="container2">
+							<audio id="sound1" src="audio/Target_practice_1_80-80-0-120-0-120.mp3" preload="auto"></audio>
+							<button onclick="document.getElementById('sound1').play();">Test music</button>
+						</div>
+					</div>
+				</div>
 			</div>
-			<div id="container" onclick="location.href='game.html'">
-				<button>Start the experiment</button>
+			<div class="margin1"></div>
+			<div id="container1">
+				<button onclick="location.href='game.html'">Start the experiment</button>
 			</div>
 		</div>
 	</body>
