--- a/shooter_game/game.html
+++ b/shooter_game/game.html
@@ -12,8 +12,10 @@
 	<body class="game">
         <canvas id="collisionCanvas"></canvas>
         <canvas id="canvas1"></canvas>
-
-
+		<audio id="sound1" src="audio/Target_practice_1_80-80-0-120-0-120.mp3" preload="auto"></audio>
+		<audio id="sound2" src="audio/Target practice 2 100-()-100-()-80-80.mp3" preload="auto"></audio>
+		<audio id="sound3" src="audio/Target practice 3 80-100-()-80-()-100.mp3" preload="auto"></audio>
+		<audio id="sound4" src="audio/Target practice 4 100-()-100-()-80-80.mp3" preload="auto"></audio>
         <script src="game.js"></script>
 	</body>
 
