--- a/game.html
+++ b/game.html
@@ -161,7 +161,7 @@
 		<audio id="audio3" src="audio/Target practice 3 80-100-()-80-()-100.mp3" preload="auto"></audio>
 		<audio id="audio4" src="audio/Target practice 4 100-()-100-()-80-80.mp3" preload="auto"></audio>
 		<div class="testfrom" id="final">
-			<form action="send_file.php" method="post">
+			<form>
 			  <h1>Thank you !</h1>
 			  <p>This is the end of the experience. Please give us some information about yourself before you leave. </p>
 			  <h4>Gender<span>*</span></h4>
