--- a/game.html
+++ b/game.html
@@ -183,7 +183,7 @@
 				<option value="55 or older">55 or older</option>
 			  </select>
 			  <div class="btn-block">
-				<button onclick="send_final()">Send Infos</button>
+				<button type="button" onclick="send_final()">Send Infos</button>
 			  </div>
 			</form>
 		  </div>	
